# Django2024

./: README.md  pyproject.toml
recipe_website/recipe_website/: settings.py  urls.py
recipe_website/usersapp/migrations/: 0001_initial.py  0002_alter_profile_image.py  0003_alter_profile_options_alter_profile_image.py  0004_alter_profile_image.py  0005_alter_profile_image.py  0006_alter_profile_image.py
recipe_website/usersapp/tests/: test_models.py  test_views.py
recipe_website/webapp/: apps.py  forms.py  middleware.py  urls.py
recipe_website/webapp/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_image.py  0003_alter_category_options_alter_recipe_options.py  0004_alter_recipe_cooking_time_alter_recipe_image.py  0005_alter_recipe_cooking_time.py  0006_alter_recipe_cooking_time.py  0007_alter_category_options.py
recipe_website/webapp/templates/: base.html
recipe_website/webapp/templates/webapp/: recipe_detail.html
recipe_website/webapp/templatetags/: custom_filters.py
recipe_website/webapp/tests/: test_forms.py  test_models.py  test_views.py
